[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/generators/saw_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/spin_bar.gd" type="Script" id=2]

[node name="Saw" type="GraphNode"]
margin_right = 181.0
margin_bottom = 59.0
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = true
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = true
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
slot/10/left_enabled = true
slot/10/left_type = 0
slot/10/left_color = Color( 1, 1, 1, 1 )
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color( 1, 1, 1, 1 )
slot/11/left_enabled = true
slot/11/left_type = 0
slot/11/left_color = Color( 1, 1, 1, 1 )
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color( 1, 1, 1, 1 )
slot/12/left_enabled = true
slot/12/left_type = 0
slot/12/left_color = Color( 1, 1, 1, 1 )
slot/12/right_enabled = false
slot/12/right_type = 0
slot/12/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_SAW_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 245.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="Freq" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="Freq"]
margin_right = 159.0
margin_bottom = 14.0
hint_tooltip = "NODE_FREQUENCY_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_FREQUENCY_PORT"

[node name="SpinBar" type="ProgressBar" parent="Freq"]
margin_left = 163.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
min_value = -32.0
max_value = 32.0
percent_visible = false
script = ExtResource( 2 )
big_step = 100.0
huge_step = 800.0
_decimals = 2

[node name="Amplitude" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 54.0
margin_right = 245.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Amplitude"]
margin_right = 159.0
margin_bottom = 14.0
hint_tooltip = "NODE_AMPLITUDE_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_AMPLITUDE_PORT"

[node name="SpinBar" type="ProgressBar" parent="Amplitude"]
margin_left = 163.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
min_value = -1.0
max_value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="Phi0" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="Phi0"]
margin_right = 115.0
margin_bottom = 14.0
hint_tooltip = "NODE_PHI0_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_PHI0_PORT"

[node name="SpinBar" type="ProgressBar" parent="Phi0"]
margin_left = 119.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
min_value = -1.0
max_value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="Power" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 84.0
margin_right = 245.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="Power"]
margin_right = 131.0
margin_bottom = 14.0
hint_tooltip = "NODE_POWER_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_POWER_PORT"

[node name="SpinBar" type="ProgressBar" parent="Power"]
margin_left = 135.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
max_value = 50.0
percent_visible = false
script = ExtResource( 2 )
big_step = 100.0
huge_step = 500.0
_decimals = 2

[node name="Decay" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 99.0
margin_right = 245.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="Decay"]
margin_right = 125.0
margin_bottom = 14.0
hint_tooltip = "NODE_DECAY_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_DECAY_PORT"

[node name="SpinBar" type="ProgressBar" parent="Decay"]
margin_left = 129.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
max_value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="DCOffset" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 114.0
margin_right = 245.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="DCOffset"]
margin_right = 154.0
margin_bottom = 14.0
hint_tooltip = "NODE_DC_OFFSET_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_DC_OFFSET_PORT"

[node name="SpinBar" type="ProgressBar" parent="DCOffset"]
margin_left = 158.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
min_value = -1.0
max_value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="RangeFrom" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 129.0
margin_right = 245.0
margin_bottom = 143.0

[node name="Label" type="Label" parent="RangeFrom"]
margin_right = 172.0
margin_bottom = 14.0
hint_tooltip = "NODE_RANGE_FROM_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_RANGE_FROM_PORT"

[node name="SpinBar" type="ProgressBar" parent="RangeFrom"]
margin_left = 176.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
min_value = -1.0
max_value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="RangeLength" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 144.0
margin_right = 245.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="RangeLength"]
margin_right = 158.0
margin_bottom = 14.0
hint_tooltip = "NODE_RANGE_LEN_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_RANGE_LEN_PORT"

[node name="SpinBar" type="ProgressBar" parent="RangeLength"]
margin_left = 162.0
margin_right = 229.0
margin_bottom = 14.0
rect_min_size = Vector2( 53, 14 )
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
max_value = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 5.0
huge_step = 20.0
_decimals = 2

[node name="Quarter0" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 159.0
margin_right = 245.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="Quarter0"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
hint_tooltip = "NODE_QUAD1_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_QUAD1_PORT"

[node name="OptionButton" type="OptionButton" parent="Quarter0"]
margin_left = 136.0
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Quarter1" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 180.0
margin_right = 245.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="Quarter1"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
hint_tooltip = "NODE_QUAD2_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_QUAD2_PORT"

[node name="OptionButton" type="OptionButton" parent="Quarter1"]
margin_left = 136.0
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Quarter2" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 201.0
margin_right = 245.0
margin_bottom = 221.0

[node name="Label" type="Label" parent="Quarter2"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
hint_tooltip = "NODE_QUAD3_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_QUAD3_PORT"

[node name="OptionButton" type="OptionButton" parent="Quarter2"]
margin_left = 136.0
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Quarter3" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 222.0
margin_right = 245.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="Quarter3"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
hint_tooltip = "NODE_QUAD4_PORT_TTIP"
mouse_filter = 1
size_flags_horizontal = 2
text = "NODE_QUAD4_PORT"

[node name="OptionButton" type="OptionButton" parent="Quarter3"]
margin_left = 136.0
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3

[connection signal="value_changed" from="Freq/SpinBar" to="." method="_on_Freq_value_changed"]
[connection signal="value_changed" from="Amplitude/SpinBar" to="." method="_on_Amplitude_value_changed"]
[connection signal="value_changed" from="Phi0/SpinBar" to="." method="_on_Phi0_value_changed"]
[connection signal="value_changed" from="Power/SpinBar" to="." method="_on_Power_value_changed"]
[connection signal="value_changed" from="Decay/SpinBar" to="." method="_on_Decay_value_changed"]
[connection signal="value_changed" from="DCOffset/SpinBar" to="." method="_on_DCOffset_value_changed"]
[connection signal="value_changed" from="RangeFrom/SpinBar" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength/SpinBar" to="." method="_on_RangeLength_value_changed"]
[connection signal="item_selected" from="Quarter0/OptionButton" to="." method="_on_Quarter_item_selected" binds= [ 0 ]]
[connection signal="item_selected" from="Quarter1/OptionButton" to="." method="_on_Quarter_item_selected" binds= [ 1 ]]
[connection signal="item_selected" from="Quarter2/OptionButton" to="." method="_on_Quarter_item_selected" binds= [ 2 ]]
[connection signal="item_selected" from="Quarter3/OptionButton" to="." method="_on_Quarter_item_selected" binds= [ 3 ]]
